@@ -1,6 +1,7 @@
 <b>Version 1.4.1:</b><br/><br/>
     &#8226; Major speed improvements when viewing tweets, profiles, searches, lists, and other networked tasks<br/>
     &#8226; Automatically load more search results, profile tweets, followers, and more at the bottom of the pages<br/>
+    &#8226; View replies to retweets<br/>
     &#8226; Many more crash fixes<br/>
 </br><br/>
 
